[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/level_moving/PlayerMoving.gd" type="Script" id=1]
[ext_resource path="res://src/level_moving/Transporter.gd" type="Script" id=2]
[ext_resource path="res://assets/level_moving/transporter_background.png" type="Texture" id=3]
[ext_resource path="res://assets/level_moving/transporter_foreground.png" type="Texture" id=4]
[ext_resource path="res://assets/level_moving/moving_theme.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/level_moving/moving_win.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "finish"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("transporter:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("transporter_foreground:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../PlayerMoving")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_all_children_invisible"
} ]
}

[node name="Moving" type="Node2D"]

[node name="PlayerMoving" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 216, -232 )
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="Transporter" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="transporter" type="Sprite" parent="Transporter"]
position = Vector2( 0, -32 )
z_index = -800
z_as_relative = false
texture = ExtResource( 3 )
centered = false
offset = Vector2( -448, -672 )
hframes = 11

[node name="transporter_foreground" type="Sprite" parent="Transporter"]
position = Vector2( 0, -32 )
z_index = 1000
z_as_relative = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( -448, -672 )
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transporter"]
anims/finish = SubResource( 1 )

[node name="ThemeAudio" type="AudioStreamPlayer2D" parent="Transporter"]
position = Vector2( 216, -232 )
stream = ExtResource( 5 )
autoplay = true

[node name="WinAudio" type="AudioStreamPlayer2D" parent="Transporter"]
stream = ExtResource( 6 )
volume_db = -20.0

[connection signal="game_over" from="PlayerMoving" to="Transporter" method="_on_PlayerMoving_game_over"]
